<resources>
    <string name="app_name">Switchboard</string>
    <string name="action_settings">Settings</string>

    <string name="title_register">Register New User</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_progress_registering">Loading...</string>
    <string name="prompt_email">E-mail</string>
    <string name="btnRegister">Register</string>
    <string name="error_field_required">Field Required.</string>
    <string name="error_invalid_password">Invalid Password (Length > 5 Characters).</string>
    <string name="error_invalid_email">Invalid E-mail Format.</string>
    <string name="error_password_mismatch">Passwords Do Not Match.</string>
    <string name="message_registration_success">Registration Successful</string>
    <string name="cupcake_ipsum">Cupcake ipsum dolor sit amet. ce cream jelly beans. Muffin toffee bonbon gingerbread halvah.  liquorice macaroon. Caramels sugar plum dragée macaroon gummies liquorice. Cake gummi bears cookie brownie tiramisu jelly beans pie apple pie. Sesame snaps pastry pudding apple pie gummi bears fruitcake macaroon jelly-o jelly-o. Gummies oat cake brownie pudding wafer chocolate cake lollipop chocolate cake. Chocolate lemon drops cake cake dessert jujubes halvah. Cake muffin pie gummies gummi bears dragée sesame snaps. Jelly-o jelly jelly. Croissant biscuit tootsie roll sweet roll sweet roll ice cream marzipan. Candy biscuit cheesecake lollipop jelly pie dragée powder cotton candy. Gummi bears cake pastry biscuit dessert fruitcake powder sweet lollipop. Apple pie cotton candy pie. Powder toffee candy cookie fruitcake gingerbread marzipan caramels tiramisu. Fruitcake marshmallow caramels biscuit.\n\nBear claw cake brownie bonbon oat cake sweet roll soufflé. Apple pie liquorice tootsie roll lemon drops candy jujubes croissant liquorice. Icing sugar plum pudding lemon drops donut macaroon wafer. Cupcake apple pie chocolate. Cupcake jelly beans chupa chups pie wafer. Tart dessert sugar plum candy canes sesame snaps sweet roll. Oat cake chupa chups macaroon powder powder chocolate bar. Jelly topping carrot cake liquorice jelly-o. Lemon drops candy chupa chups donut sweet roll. Gummi bears marzipan cupcake tootsie roll toffee. Candy gingerbread jujubes halvah tart cheesecake. Tiramisu cake jujubes chocolate bar jelly lemon drops lollipop.\n\nBiscuit jelly-o tart croissant sesame snaps sweet sugar plum cake lemon drops. Topping carrot cake sesame snaps donut. Sweet roll chocolate cake chocolate toffee toffee gummies. Danish powder carrot cake. Pudding liquorice toffee lollipop wafer jelly beans wafer. Lollipop gummies biscuit pastry marshmallow tiramisu cake candy canes. Jujubes jujubes brownie. Chupa chups halvah tiramisu fruitcake tiramisu donut oat cake gingerbread dessert. Croissant wafer oat cake chocolate. Tart candy pudding cotton candy gingerbread sweet. Liquorice icing croissant biscuit tiramisu sugar plum. Tootsie roll chocolate pie jujubes croissant danish danish icing. Ice cream lollipop chocolate. Cake macaroon sugar plum sweet.\n\nDonut bonbon lollipop danish brownie danish carrot cake. Tootsie roll tiramisu marshmallow candy canes gingerbread topping muffin sesame snaps. Sweet jujubes cupcake gummies. Carrot cake pastry candy canes icing jelly toffee. Carrot cake sugar plum caramels carrot cake. Sesame snaps marshmallow brownie macaroon sweet roll. Cake gummi bears tart chocolate bar tart powder cake toffee sweet. Fruitcake jelly-o jujubes chupa chups sweet roll sweet roll bear claw macaroon. Sweet roll gummies jelly beans powder powder brownie macaroon. Lollipop tart croissant sugar plum sesame snaps sweet cheesecake icing sweet. Jujubes gummi bears oat cake pastry muffin fruitcake. Fruitcake gingerbread chocolate cake. Pie tart cookie donut marzipan cookie. Pudding chupa chups brownie oat cake jelly sweet.
    </string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="logout_confirmation">Are you sure you wish to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
